syntax = "proto3";
option csharp_namespace = "Lachain.Proto";
option java_package = "com.latoken.proto";
import "default.proto";
import "multisig.proto";

message BlockHeader {
    uint64 index = 1;
    UInt256 prev_block_hash = 2;
    UInt256 merkle_root = 3;
    reserved 4; // deleted timestamp
    UInt256 state_hash = 5;
    reserved 6; // deleted validator
    uint64 nonce = 7;
}

message Block {
    BlockHeader header = 1;
    UInt256 hash = 2;
    repeated UInt256 transaction_hashes = 4;
    MultiSig multisig = 3;
    uint64 gas_price = 5;
    uint64 timestamp = 6;
}
